# ALICE-Edge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: pi5_bench.rs
bindings/: AliceEdge.cs  alice_edge.h
examples/: bme280_compress.rs  dashboard_demo.rs  mqtt_aws_iot.rs  mqtt_local.rs  multi_sensor_hub.rs  python_batch.py  simulate_sensors.rs
src/: asp_bridge.rs  codec_bridge.rs  dashboard.rs  db_bridge.rs  depth_capture.rs  edge_pipeline.rs  ffi.rs  lib.rs  ml_bridge.rs  mqtt_bridge.rs  object_classifier.rs  ota.rs  python.rs  ring_buffer.rs  sdf_compress.rs  sensor_fusion.rs  sensors.rs  telemetry.rs  watchdog.rs  zip_bridge.rs
