[package]
name = "alice-edge"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Embedded Model Generator - Don't send data, send the law"
license = "MIT"
repository = "https://github.com/ext-sakamoro/ALICE-Edge"
keywords = ["embedded", "no_std", "compression", "edge", "iot"]
categories = ["embedded", "no-std", "compression"]
readme = "README.md"

[lib]
name = "alice_edge"
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable std for testing on host
std = []
pyo3 = ["dep:pyo3", "dep:numpy", "std"]  # Python bindings
zip = ["dep:alice_core", "std"]  # Compress model coefficients with ALICE-Zip

[dependencies]
# No dependencies - pure no_std (except optional Python bindings)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }
alice_core = { package = "alice-zip", path = "../ALICE-Zip/libalice", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
# For testing on host

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
