[package]
name = "alice-edge"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "Embedded Model Generator - Don't send data, send the law"
license = "MIT"
repository = "https://github.com/ext-sakamoro/ALICE-Edge"
keywords = ["embedded", "no_std", "compression", "edge", "iot"]
categories = ["embedded", "no-std", "compression"]
readme = "README.md"

[lib]
name = "alice_edge"
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enable std for testing on host
std = []
pyo3 = ["dep:pyo3", "dep:numpy", "std"]  # Python bindings
zip = ["dep:alice_core", "std"]  # Compress model coefficients with ALICE-Zip
codec = ["dep:alice-codec", "std"]  # Wavelet denoising for sensor data
db = ["dep:alice-db", "std"]  # ALICE-DB persistence for model coefficients
depth-camera = ["dep:rusb", "std"]  # Dolphin D5 Lite depth camera driver
sdf = ["dep:alice-sdf", "std"]  # SDF compression for point clouds
ml = ["dep:alice-ml", "std"]  # 1.58bit ternary object classification
asp = ["dep:libasp", "std"]  # ALICE Streaming Protocol bridge
edge-pipeline = ["depth-camera", "sdf", "ml", "asp"]  # Full edge pipeline
sensors = ["dep:serde", "dep:serde_json", "std"]  # Sensor drivers (simulated)
sensors-hw = ["sensors", "dep:rppal", "dep:serialport"]  # Real GPIO/I2C/SPI/UART
mqtt = ["dep:rumqttc", "std"]  # MQTT publish to AWS IoT / Azure / local
dashboard = ["dep:alice-analytics", "std"]  # ALICE-Analytics dashboard

[dependencies]
# No dependencies - pure no_std (except optional Python bindings)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }
alice_core = { package = "alice-zip", path = "../ALICE-Zip/libalice", optional = true }
alice-codec = { path = "../ALICE-Codec", optional = true, default-features = false, features = ["std"] }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
rusb = { version = "0.9", optional = true }
alice-sdf = { path = "../ALICE-SDF", optional = true, default-features = false, features = ["svo"] }
alice-ml = { path = "../ALICE-ML", optional = true, default-features = false, features = ["std"] }
libasp = { path = "../ALICE-Streaming-Protocol", optional = true, default-features = false }
# Sensor drivers
rppal = { version = "0.19", optional = true }
serialport = { version = "4.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
# MQTT bridge
rumqttc = { version = "0.24", optional = true }
# Dashboard
alice-analytics = { path = "../ALICE-Analytics", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
# For testing on host
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pi5_bench"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
