[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "alice-edge"
requires-python = ">=3.8"
description = "Embedded Model Generator — Don't send data, send the law"
license = { text = "MIT" }
authors = [{ name = "Moroya Sakamoto" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3"]
